fix: :lipstick: dark mode css isues & removed isNew from sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@
   --success: oklch(0.58 0.1852 144.77);
   --warning: oklch(0.85 0.2 99);
   --warning-foreground: oklch(0.145 0 0);
-  --link: oklch(0.6 0.118 184.704);
+  --link: oklch(52% 0.22 307);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0 / 15%);
   --ring: oklch(0.708 0 0);
@@ -67,7 +67,7 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(0.17 0 0);
   --foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
@@ -79,7 +79,7 @@
   --warning: oklch(0.82 0.17 87.89);
   --warning-foreground: oklch(0.145 0 0);
   --success: oklch(0.74 0.19 146.02);
-  --link: oklch(0.6 0.118 184.704);
+  --link: oklch(68.661% 0.09175 311.473);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
